# synth-controller

./: README.md  install_pi.sh  pyproject.toml  run.sh  systemd:synth.service
synth/: app.py  audio.py  config.yaml  config_store.py  controller.py  dev_web.py  encoder.py  events.py  matrix.py  pins.py
synth/web/: server.py
synth/web/static/: app.js  styles.css
synth/web/templates/: index.html
systemd/: synth.service
